ui_tests/tests/should-fail/2_2-flex-mod-top-mod-bad-name.rs
use flex_mod::flex_mod;

fn main() {}

#[flex_mod(define_foo)]
mod bad_name {}
